# bilibili-post-clawer-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
docunemtdb-example/: .env.example  .gitignore  docker-compose.yml
src/: config_type.rs  fetch_posts.rs  fetch_reply.rs  main.rs  open_page.rs  post_parser.rs  utils.rs  wbi_sign.rs
src/db/: mod.rs  postgres_db.rs  result_db.rs  runtime_db.rs
