[package]
name = "bilibili-feed-clawer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
headless_chrome = { version = "1.0.21", features = ["fetch"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
bson = "2"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = "0.13.2"
md5 = "0.8.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
chrono = "0.4"
